manifests/base/resources/management-console/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9180"
    prometheus.io/scrape: "true"
  labels:
    app: management-console
    chart: management-console-1.6.265
    heritage: Helm
    release: management-console
  name: management-console
spec:
  ports:
  - name: management-console
    port: 3024
    protocol: TCP
    targetPort: 3024
  selector:
    app: management-console
    release: management-console
  type: ClusterIP
---
