manifests/base/resources/management-console/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^([^.]*[^/])$ $1/ permanent;
      more_set_headers "Cache-Control" "Content-Security-Policy: frame-ancestors 'none'" "Pragma" "X-Content-Type-Options: nosniff" "X-Frame-Options: DENY" "X-XSS-Protection: 1; mode=block";
      if ( $request_method  !~ ^(GET|HEAD)$ ) {
        add_header Allow "GET, HEAD" always;
        return 405;
      }
  labels:
    app: management-console
    chart: management-console-1.6.265
    heritage: Helm
    release: management-console
  name: management-console
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: management-console
          servicePort: 3024
        path: /console
---
